--- a/styles.css
+++ b/styles.css
@@ -71,18 +71,14 @@ body {
   }
   
   .main-image {
-    width: 18px;
+    width: 90vw;
     height: 90px;
+    height: auto;
     gap: 0px;
     border-radius: 56px 0px 0px 0px;
-    border: 1px 0px 0px 0px;   
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.5s ease-in-out, transform 0.3s ease-in-out;
-}
-
-.main-image:hover {
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.3);
-    transform: scale(1.05); 
+    border: 1px 0px 0px 0px; 
+    object-fit: cover;
+    box-sizing: border-box;  
 }
 
   .projects {
@@ -123,7 +119,7 @@ body {
   }
   
   .project-item img {
-    width: 416px;
+    width: 100%;
     height: 277px;
     gap: 0px;
     border: 1px 0px 0px 0px;
@@ -213,5 +209,73 @@ body {
     }
   }
 
+  @media(max-width:1024px) {
+    .grid {
+      grid-template-columns: 1fr;
+    }
+    .main {
+      font-size: 80px;
+      line-height: 90px;
+    }
+    .bio p {
+      font-size: 36px;
+      line-height: 40px;
+    }
   
-  
+    .bio2 p {
+      font-size: 22px;
+    }
+  }
+  @media(max-width:768px) {
+    nav {
+      flex-direction: column;
+      text-align: center;
+    }
+    nav h1 {
+      font-size: 36px;
+    }
+    nav ul {
+      flex-direction: column;
+      gap: 10px;
+    }
+    .main h1 {
+      font-size: 60px;
+      line-height: 70px;
+    }
+    .grid {
+      grid-template-columns: 1fr;
+    }
+    .bio2 p {
+      width: 90vw;
+      font-size: 20px;
+      line-height: 25px;
+    }
+    footer {
+      flex-direction: column;
+      gap: 10px;
+      text-align: center;
+    }
+  }
+  @media(max-width: 480px) {
+    nav h1 {
+      font-size: 28px;
+    }
+    nav a {
+      font-size: 20px;
+    }
+    .main h1 {
+      font-size: 50px;
+      line-height: 60px;
+    }
+    .bio p {
+      font-size: 28px;
+      line-height: 32px;
+    }
+    .bio2 {
+      font-size: 18px;
+      line-height: 26px;
+    }
+    .contact-btn {
+      padding: 10px 16px;
+    }
+  }
