--- a/styles.css
+++ b/styles.css
@@ -70,16 +70,20 @@ body {
     margin: 20px 0;
   }
   
-  .main-image {
+  .main-image img{
     width: 90vw;
-    height: 90px;
-    height: auto;
     gap: 0px;
-    border-radius: 56px 0px 0px 0px;
-    border: 1px 0px 0px 0px; 
+    border: 1px 1px 1px 1px; 
     object-fit: cover;
     box-sizing: border-box;  
-}
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  }
+
+  .main-image img:hover {
+    transform: scale(1.10);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    border-radius: 56px;
+  }
 
   .projects {
     padding: 40px 20px;
@@ -210,9 +214,7 @@ body {
   }
 
   @media(max-width:1024px) {
-    .grid {
-      grid-template-columns: 1fr;
-    }
+    
     .main {
       font-size: 80px;
       line-height: 90px;
@@ -242,9 +244,7 @@ body {
       font-size: 60px;
       line-height: 70px;
     }
-    .grid {
-      grid-template-columns: 1fr;
-    }
+
     .bio2 p {
       width: 90vw;
       font-size: 20px;
@@ -257,6 +257,9 @@ body {
     }
   }
   @media(max-width: 480px) {
+    .grid {
+      grid-template-columns: 1fr;
+    }
     nav h1 {
       font-size: 28px;
     }
